# AudioGrab

./: .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
app/: __init__.py  cli.py  config.py  logging_config.py  main.py
app/api/: __init__.py  ai_settings_routes.py  annotation_routes.py  auth.py  batch_routes.py  clip_routes.py  cloud_routes.py  extract_routes.py  middleware.py  obsidian_routes.py  ratelimit.py  realtime_routes.py  routes.py  schedule_routes.py  schemas.py  sentiment_routes.py  storage_routes.py  subscription_routes.py  subscription_schemas.py  transcription_store.py  translation_routes.py  webhook_routes.py
app/bot/: __init__.py  bot.py  webhook.py
app/core/: __init__.py  auth.py  base.py  batch_manager.py  checkpoint.py  client.py  clip_exporter.py  clip_generator.py  converter.py  diarizer.py  downloader.py  enhancer.py  exceptions.py  extractor.py  job_store.py  merger.py  metadata_tagger.py  obsidian_exporter.py  parser.py  queue_manager.py  realtime_transcriber.py  retry.py  scheduler.py  sentiment_analyzer.py  summarizer.py  (+10 more)
browser-extension/: README.md  background.js  content.js  generate-icons.sh  manifest.firefox.json  manifest.json  popup.html  popup.js
docs/: README.md  api-endpoints.md  architecture.md  authentication.md  deployment.md  diarization-setup.md  queue-scheduling.md  todo.md  webhooks-annotations.md
frontend/: Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package.json
tests/: __init__.py  test_parser.py
(+46 files in other folders)
